[FISH-1419] use separate partition groups for Payara domain instance groups prevents partitions to be placed on instances where the application is not deployed